--- a/app/views/contact_us_mailer/contact_us.html.erb
+++ b/app/views/contact_us_mailer/contact_us.html.erb
@@ -6,15 +6,9 @@
 </head>
 
 <body>
-  <h1>Welcome to example.com, <%= @user.email %></h1>
-  <p>
-    You have successfully signed up to example.com,
-    your username is: <%= @user.email %>.<br>
-  </p>
-  <p>
-    To login to the site, just follow this link: <%= @url %>.
-  </p>
-  <p>Thanks for joining and have a great day!</p>
+  <h1><%= @full_name %> is inquiring about the website</h1>
+  <p>Email: <%= @email %></p>
+  <p>Message: <%= @message %></p>
 </body>
 
 </html>
