updated email view

--- a/app/views/contact_us_mailer/contact_us.html.erb
+++ b/app/views/contact_us_mailer/contact_us.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-</head>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  </head>
 
-<body>
-  <h1><%= @full_name %> is inquiring about the website</h1>
-  <p>Email: <%= @email %></p>
-  <p>Message: <%= @message %></p>
-</body>
+  <body>
+    <h1><%= @full_name %> at <%= @email %> is inquiring about the following:</h1>
+    <p>Subject: <%= @subject %></p>
+    <br/>
+    <p>Message: <%= @message %></p>
+  </body>
 
 </html>
