--- a/app/views/contact_us_mailer/contact_us.html.erb
+++ b/app/views/contact_us_mailer/contact_us.html.erb
@@ -6,10 +6,10 @@
   </head>
 
   <body>
-    <h1><%= @full_name %> at <%= @email %> is inquiring about the following:</h1>
-    <p>Subject: <%= @subject %></p>
-    <br/>
-    <p>Message: <%= @message %></p>
+    <h1><%= @full_name %> is inquiring about the following:</h1>
+    <h3>Subject: <%= @subject %></h2>
+    <h3>Message:</h2>
+    <p><%= @message %></p>
   </body>
 
 </html>
