--- a/app/views/contact_mailer/contact.html.erb
+++ b/app/views/contact_mailer/contact.html.erb
@@ -6,9 +6,8 @@
   </head>
 
   <body>
-    <h1><%= @full_name %> is inquiring about the following:</h1>
-    <h3>Subject: <%= @subject %></h2>
-    <h3>Message:</h2>
+    <h3>From: <%= @full_name %> (<%= @sender %>)</h3>
+    <h3>Message:</h3>
     <p><%= @message %></p>
   </body>
 
